--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -22,12 +22,13 @@
   </div>
   <div fxFlex>
     <md-grid-list cols="2" rowHeight="200px">
-      <md-grid-tile *ngFor="let dish of dishes">
+      <md-grid-tile *ngFor="let dish of dishes" (click) = "onSelect(dish)">
         <img height="200px" src={{dish.image}} alt={{dish.name}}>
         <md-grid-tile-footer>
           <h1 md-line>{{dish.name | uppercase}}</h1>
         </md-grid-tile-footer>
       </md-grid-tile>
     </md-grid-list>
+    <app-dishdetail [dish]="selectedDish"></app-dishdetail>
   </div>
 </div>
