--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<md-toolbar color="primary"> <span>Ristorante Con Fusion</span> </md-toolbar>
+<app-header></app-header>
 <app-menu></app-menu>
-<app-dishdetail></app-dishdetail>
+<app-footer></app-footer>
