--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,4 @@
-<div class="container"
-     fxLayout="column"
-     fxLayoutGap="10px">
+<div class="container" fxLayout="column" fxLayoutGap="10px">
   <md-list fxFlex>
     <md-list-item *ngFor="let dish of dishes">
       <img md-list-avatar src={{dish.image}} alt={{dish.name}}>
@@ -11,9 +9,7 @@
     </md-list-item>
   </md-list>
 </div>
-<div class="container"
-     fxLayout="column"
-     fxLayoutGap="10px">
+<div class="container" fxLayout="column" fxLayoutGap="10px">
   <div fxFlex>
     <div>
       <h3>Menu</h3>
