--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,50 +1,51 @@
-<div class="container"
-fxLayout="row"
-fxLayout.sm="column"
-fxLayout.xs="column"
-fxLayoutAlign.gt-md="space-around center"
-fxLayoutGap="10px">
+<div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign.gt-md="space-around center"
+    fxLayoutGap="10px">
 
-<md-card *ngIf="dish" fxFlex>
-<md-card-header>
-<div md-card-avatar></div>
-<md-card-title>
- <h3>{{dish.name | uppercase}}</h3>
-</md-card-title>
-</md-card-header>
-<img md-card-image src={{dish.image}} alt={{dish.name}}>
-<md-card-content>
-<p>{{dish.description}}
-</p>
-</md-card-content>
-</md-card>
+    <md-card *ngIf="dish" fxFlex>
 
-<md-card *ngIf="promotion" fxFlex>
-<md-card-header>
-<div md-card-avatar></div>
-<md-card-title>
- <h3>{{promotion.name | uppercase}}</h3>
-</md-card-title>
-</md-card-header>
-<img md-card-image src={{promotion.image}} alt={{promotion.name}}>
-<md-card-content>
-<p>{{promotion.description}}
-</p>
-</md-card-content>
-</md-card>
+        <md-card-header>
+            <div md-card-avatar></div>
+            <md-card-title>
+                <h3>{{dish.name | uppercase}}</h3>
+            </md-card-title>
+        </md-card-header>
+        <img md-card-image src={{dish.image}} alt={{dish.name}}>
+        <md-card-content>
+            <p>{{dish.description}}
+            </p>
+        </md-card-content>
+    </md-card>
+    <div [hidden]="dish">
+        <md-spinner></md-spinner>
+        <h4>Loading . . . Please Wait</h4>
+    </div>
 
-<md-card *ngIf="selectLeader" fxFlex>
-<md-card-header>
-<div md-card-avatar></div>
-<md-card-title>
- <h3>{{selectLeader.name | uppercase}} {{selectLeader.abbr | uppercase}}</h3>
-</md-card-title>
-</md-card-header>
-<img md-card-image src={{selectLeader.image}} alt={{selectLeader.name}}>
-<md-card-content>
-<p>{{selectLeader.description}}
-</p>
-</md-card-content>
-</md-card>
+    <md-card *ngIf="promotion" fxFlex>
+        <md-card-header>
+            <div md-card-avatar></div>
+            <md-card-title>
+                <h3>{{promotion.name | uppercase}}</h3>
+            </md-card-title>
+        </md-card-header>
+        <img md-card-image src={{promotion.image}} alt={{promotion.name}}>
+        <md-card-content>
+            <p>{{promotion.description}}
+            </p>
+        </md-card-content>
+    </md-card>
+
+    <md-card *ngIf="selectLeader" fxFlex>
+        <md-card-header>
+            <div md-card-avatar></div>
+            <md-card-title>
+                <h3>{{selectLeader.name | uppercase}} {{selectLeader.abbr | uppercase}}</h3>
+            </md-card-title>
+        </md-card-header>
+        <img md-card-image src={{selectLeader.image}} alt={{selectLeader.name}}>
+        <md-card-content>
+            <p>{{selectLeader.description}}
+            </p>
+        </md-card-content>
+    </md-card>
 
 </div>
