--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,6 +33,10 @@
             </p>
         </md-card-content>
     </md-card>
+    <div [hidden]="promotion">
+        <md-spinner></md-spinner>
+        <h4>Loading . . . Please Wait</h4>
+    </div>
 
     <md-card *ngIf="selectLeader" fxFlex>
         <md-card-header>
