--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -5,8 +5,8 @@
      fxLayoutAlign.gt-md="space-around center"
      fxLayoutGap="10px"
      fxLayoutGap.xs="0">
-  <div fxFlex="40">
-    <div fxFlex *ngIf="dish">
+     <div fxFlex="40" *ngIf="dish">
+    <div fxFlex>
       <md-card>
         <md-card-header>
           <md-card-title>
@@ -20,16 +20,19 @@
           </p>
         </md-card-content>
         <md-card-actions>
+          <button md-button [routerLink]="['/dishdetail', prev]"><span class="fa fa-chevron-left fa-lg"></span></button>
           <button md-button (click)="goBack()">BACK</button>
           <button md-button>LIKE</button>
           <button md-button>SHARE</button>
+          <span class="flex-spacer"></span>
+          <button md-button [routerLink]="['/dishdetail', next]"><span class="fa fa-chevron-right fa-lg"></span></button>
         </md-card-actions>
       </md-card>
     </div>
   </div>
-  <div fxFlex="40">
+  <div fxFlex="40" *ngIf="dish">
     <md-list fxFlex>
-      <md-list-item *ngIf="dish">
+      <md-list-item>
         <md-list>
           <h3>Comments</h3> 
           <md-list-item> {{dish.comments[0].comment}} <br>{{dish.comments[0].rating}} Stars <br> -- {{dish.comments[0].author}} {{dish.comments[0].date|date}} </md-list-item><br><br>
