--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -1,11 +1,6 @@
-<div class="container"
-     fxLayout="row"
-     fxLayout.sm="column"
-     fxLayout.xs="column"
-     fxLayoutAlign.gt-md="space-around center"
-     fxLayoutGap="10px"
-     fxLayoutGap.xs="0">
-     <div fxFlex="40" *ngIf="dish">
+<div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign.gt-md="space-around center"
+  fxLayoutGap="10px" fxLayoutGap.xs="0">
+  <div fxFlex="40" *ngIf="dish">
     <div fxFlex>
       <md-card>
         <md-card-header>
@@ -32,16 +27,31 @@
   </div>
   <div fxFlex="40" *ngIf="dish">
     <md-list fxFlex>
+      <h3>Comments</h3>
       <md-list-item>
-        <md-list>
-          <h3>Comments</h3> 
-          <md-list-item> {{dish.comments[0].comment}} <br>{{dish.comments[0].rating}} Stars <br> -- {{dish.comments[0].author}} {{dish.comments[0].date|date}} </md-list-item><br><br>
-          <md-list-item> {{dish.comments[1].comment}} <br>{{dish.comments[1].rating}} Stars <br> -- {{dish.comments[1].author}} {{dish.comments[1].date|date}} </md-list-item><br><br>
-          <md-list-item> {{dish.comments[2].comment}} <br>{{dish.comments[2].rating}} Stars <br> -- {{dish.comments[2].author}} {{dish.comments[2].date|date}} </md-list-item><br><br>
-          <md-list-item> {{dish.comments[3].comment}} <br>{{dish.comments[3].rating}} Stars <br> -- {{dish.comments[3].author}} {{dish.comments[3].date|date}} </md-list-item><br><br>
-          <md-list-item> {{dish.comments[4].comment}} <br>{{dish.comments[4].rating}} Stars <br> -- {{dish.comments[4].author}} {{dish.comments[4].date|date}} </md-list-item><br><br>
-        </md-list>
+        <p md-line>{{dish.comments[0].comment}}</p>
+        <p md-line>{{dish.comments[0].rating}} Stars </p>
+        <p md-line>-- {{dish.comments[0].author}} {{dish.comments[0].date|date}}</p>
       </md-list-item>
+
+      <md-list-item>
+        <p md-line>{{dish.comments[1].comment}}</p>
+        <p md-line>{{dish.comments[1].rating}} Stars </p>
+        <p md-line>-- {{dish.comments[1].author}} {{dish.comments[1].date|date}}</p>
+      </md-list-item>
+
+      <md-list-item>
+        <p md-line>{{dish.comments[2].comment}}</p>
+        <p md-line>{{dish.comments[2].rating}} Stars </p>
+        <p md-line>-- {{dish.comments[2].author}} {{dish.comments[2].date|date}}</p>
+      </md-list-item>
+
+      <md-list-item>
+        <p md-line>{{dish.comments[3].comment}}</p>
+        <p md-line>{{dish.comments[3].rating}} Stars </p>
+        <p md-line>-- {{dish.comments[3].author}} {{dish.comments[3].date|date}}</p>
+      </md-list-item>
+
     </md-list>
   </div>
 </div>
