--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,6 +4,8 @@
   <a md-button routerLink="/aboutus"><span class="fa fa-info fa-lg"></span> About</a>
   <a md-button routerLink="/menu"><span class="fa fa-list fa-lg"></span> Menu</a>
   <a md-button routerLink="/contactus"><span class="fa fa-address-card fa-lg"></span> Contact</a>
+  <span class="flex-spacer"></span>
+  <a md-button (click)="openLoginForm()"><span class="fa fa-sign-in fa-lg"></span> Login</a>
 </md-toolbar>
 <div class="container jumbotron"
      fxLayout="row"
@@ -25,3 +27,4 @@
   </div>
   <div fxFlex></div>
 </div>
+
