--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -33,6 +33,36 @@
         <p md-line>{{comment.rating}} Stars</p>
         <p md-line>-- {{comment.author}} {{comment.date | date }}</p>
       </md-list-item>
+      
+      <p>{{ ratingForm.value | json }} {{ ratingForm.status | json }}</p>
+      
+      <form novalidate [formGroup]="ratingForm" (ngSubmit)="onSubmit()">
+        <p>
+          <md-input-container class="full-width" dividerColor="{{(formErrors.author) ? 'warn' : 'primary'}}">
+            <input mdInput formControlName="author" placeholder="Name" type="text" required>
+            <md-hint>
+              <span [hidden]="!(formErrors.author)">
+                {{formErrors.name}}</span>
+            </md-hint>
+          </md-input-container>
+        </p>
+
+        <md-slider mdInput formControlName="rating" min="1" max="5" step="1" value="5" thumbLabel tickInterval="1"></md-slider>
+
+        <p>
+          <md-input-container class="full-width" dividerColor="{{(formErrors.comment) ? 'warn' : 'primary'}}">
+            <textarea mdInput formControlName="comment" placeholder="Your Feedback" rows=12></textarea>
+            <md-hint>
+              <span [hidden]="!(formErrors.comment)">
+                {{formErrors.comment}}</span>
+            </md-hint>
+          </md-input-container>
+        </p>
+        <button type="submit" md-button class="background-primary text-floral-white" [disabled]="ratingForm.invalid">Submit</button>
+      </form>
+
     </md-list>
+
+
+
   </div>
-</div>
