--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,4 @@
-<div class="container"
-     fxLayout="column"
-     fxLayoutGap="10px">
+<div class="container" fxLayout="column" fxLayoutGap="10px">
   <md-list fxFlex>
     <md-list-item *ngFor="let dish of dishes">
       <img md-list-avatar src={{dish.image}} alt={{dish.name}}>
@@ -11,9 +9,7 @@
     </md-list-item>
   </md-list>
 </div>
-<div class="container"
-     fxLayout="column"
-     fxLayoutGap="10px">
+<div class="container" fxLayout="column" fxLayoutGap="10px">
   <div fxFlex>
     <div>
       <h3>Menu</h3>
@@ -23,7 +19,7 @@
   <div fxFlex>
     <md-grid-list cols="2" rowHeight="200px">
       <md-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]">
-        <img height="200px" src={{dish.image}} alt={{dish.name}}>
+        <img height="200px" src="{{BaseURL + dish.image}}" alt={{dish.name}}>
         <md-grid-tile-footer>
           <h1 md-line>{{dish.name | uppercase}}</h1>
         </md-grid-tile-footer>
