--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div class="container" fxLayout="column" fxLayoutGap="10px">
   <md-list fxFlex>
     <md-list-item *ngFor="let dish of dishes">
-      <img md-list-avatar src={{dish.image}} alt={{dish.name}}>
+      <img md-list-avatar src={{BaseURL+dish.image}} alt={{dish.name}}>
       <h1 md-line> {{dish.name}} </h1>
       <p md-line>
         <span> {{dish.description}} </span>
