--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,35 +8,35 @@
                 <h3>{{dish.name | uppercase}}</h3>
             </md-card-title>
         </md-card-header>
-        <img md-card-image src={{dish.image}} alt={{dish.name}}>
+        <img md-card-image src={{BaseURL+dish.image}} alt={{BaseURL+dish.name}}>
         <md-card-content>
             <p>{{dish.description}}
             </p>
         </md-card-content>
     </md-card>
 
-    <md-card *ngIf="promotion" fxFlex>
+    <md-card *ngFor="let promotion of promotion" fxFlex>
         <md-card-header>
             <div md-card-avatar></div>
             <md-card-title>
                 <h3>{{promotion.name | uppercase}}</h3>
             </md-card-title>
         </md-card-header>
-        <img md-card-image src={{promotion.image}} alt={{promotion.name}}>
+        <img md-card-image src={{BaseURL+promotion.image}} alt={{BaseURL+promotion.name}}>
         <md-card-content>
             <p>{{promotion.description}}
             </p>
         </md-card-content>
     </md-card>
 
-    <md-card *ngIf="leader" fxFlex>
+    <md-card *ngFor="let leader of leader" fxFlex>
         <md-card-header>
             <div md-card-avatar></div>
             <md-card-title>
                 <h3>{{leader.name | uppercase}} {{leader.abbr | uppercase}}</h3>
             </md-card-title>
         </md-card-header>
-        <img md-card-image src={{leader.image}} alt={{leader.name}}>
+        <img md-card-image src={{BaseURL+leader.image}} alt={{leader.name}}>
         <md-card-content>
             <p>{{leader.description}}
             </p>
