--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -59,7 +59,7 @@ fxLayoutGap="10px">
      <p>
       <md-list fxFlex>
         <md-list-item *ngFor="let leader of leader">
-          <img md-list-avatar src={{leader.image}} alt={{leader.name}}>
+          <img md-list-avatar src={{BaseURL+leader.image}} alt={{BaseURL+leader.name}}>
           <h1 md-line> {{leader.name }} {{leader.abbr | uppercase}} </h1>
           <p md-line>
             <span> {{leader.designation}} </span>
