--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,6 +7,14 @@
         <span> {{dish.description}} </span>
       </p>
     </md-list-item>
+    <div [hidden]="dishes || errMess">
+      <md-spinner></md-spinner>
+      <h4>Loading . . . Please Wait</h4>
+    </div>
+    <div *ngIf="errMess">
+      <h2>Error</h2>
+      <h4>{{errMess}}</h4>
+    </div>
   </md-list>
 </div>
 <div class="container" fxLayout="column" fxLayoutGap="10px">
