--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,6 @@
 <div class="container" fxLayout="column" fxLayoutGap="10px">
 
-  <div fxFlex>
+  <div fxFlex [@expand]>
     <div>
       <h3>Contact Us</h3>
       <hr>
@@ -10,7 +10,7 @@
     <h3>Send us your Feedback</h3>
     <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>
 
-    <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
+    <form novalidate [formGroup]="feedbackForm" (ngSubmit)="submitFeedback()">
       <p>
         <md-input-container class="half-width" dividerColor="{{(formErrors.firstname) ? 'warn' : 'primary'}}">
           <input mdInput formControlName="firstname" placeholder="First Name" type="text" required>
@@ -62,6 +62,20 @@
       </p>
       <button type="submit" md-button class="background-primary text-floral-white" [disabled]="feedbackForm.invalid">Submit</button>
     </form>
+    <div [hidden]="!mySubmit" *ngIf="!myShowForm">
+      <h4>Submitting Form</h4>
+      <md-spinner></md-spinner> 
+    </div>
+    <div [hidden]="mySubmit" *ngIf="!myShowForm"> 
+      <h3>Your Submission</h3>
+      <h5>Fristname: {{feedback.lastname}}</h5> 
+      <h5>Lastname: {{feedback.lastname}}</h5> 
+      <h5>Tel.Number: {{feedback.telnum}}</h5> 
+      <h5>Email: {{feedback.email}}</h5> 
+      <h5>Contact You ? : {{feedback.agree}}</h5> 
+      <h5>How ? : {{feedback.contacttype}}</h5> 
+      <h5>Feedback: {{feedback.message}}</h5> 
+    </div>  
   </div>
   <hr>
   <div fxFlex>
