--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -1,7 +1,7 @@
 <div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign.gt-md="space-around center"
   fxLayoutGap="10px" fxLayoutGap.xs="0">
   <div fxFlex="40">
-    <div fxFlex *ngIf="dish" [@visibility]="visibility">
+    <div fxFlex *ngIf="dish" [@expand]>
       <md-card>
         <md-card-header>
           <md-card-title>
