--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
         <h2>Error</h2>
         <h4>{{errMess}}</h4>
       </div>
-    <md-card *ngIf="dish" fxFlex>
+    <md-card *ngIf="dish" fxFlex [@expand]>
         <md-card-header>
             <div md-card-avatar></div>
             <md-card-title>
@@ -21,7 +21,7 @@
         </md-card-content>
     </md-card>
     
-    <md-card *ngFor="let promotion of promotion" fxFlex>
+    <md-card *ngFor="let promotion of promotion" fxFlex [@expand]>
         <md-card-header>
             <div md-card-avatar></div>
             <md-card-title>
@@ -35,7 +35,7 @@
         </md-card-content>
     </md-card>
 
-    <md-card *ngFor="let leader of leader" fxFlex>
+    <md-card *ngFor="let leader of leader" fxFlex [@expand]>
         <md-card-header>
             <div md-card-avatar></div>
             <md-card-title>
